[gd_scene load_steps=6 format=3 uid="uid://1f411531vc5t"]

[ext_resource type="Script" uid="uid://c4yhl1jgtetdo" path="res://UI/Main Menu Etc/settings.gd" id="1_v840x"]

[sub_resource type="LabelSettings" id="LabelSettings_a40bj"]
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_v840x"]
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_m3hxn"]
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_06oxg"]
font_size = 22

[node name="Settings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v840x")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -63.0
offset_right = 48.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_a40bj")

[node name="Music_Audio" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Music_Audio"]
layout_mode = 0
offset_top = 20.5
offset_right = 40.0
offset_bottom = 43.5
text = "Music"
label_settings = SubResource("LabelSettings_v840x")

[node name="SFX_Audio" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SFX_Audio"]
offset_top = 17.5
offset_right = 144.0
offset_bottom = 48.5
text = "Sound Effects"
label_settings = SubResource("LabelSettings_m3hxn")

[node name="Mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Mute"]
offset_left = 25.0
offset_top = 0.5
offset_right = 65.0
offset_bottom = 23.5
text = "Mute"
label_settings = SubResource("LabelSettings_06oxg")

[node name="Main Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Music_Audio" to="." method="_on_music_audio_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SFX_Audio" to="." method="_on_sfx_audio_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
